[gd_scene load_steps=7 format=3 uid="uid://pxqgegm6a54e"]

[ext_resource type="Script" uid="uid://dlns1ix5ixjpe" path="res://player.gd" id="1_kne1u"]
[ext_resource type="Texture2D" uid="uid://ckuybkhj76utn" path="res://Img/tankImages/tanks_tankGreen_body3.png" id="2_e80uo"]
[ext_resource type="Texture2D" uid="uid://dcir4ux0jsoml" path="res://Img/tankImages/tanks_turret2.png" id="3_cxr5p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tdg3f"]
size = Vector2(48, 24)

[sub_resource type="Gradient" id="Gradient_kne1u"]
offsets = PackedFloat32Array(0, 0.78)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_e80uo"]
gradient = SubResource("Gradient_kne1u")
fill = 1
fill_from = Vector2(0.4906542, 0.5140187)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_kne1u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_tdg3f")
one_way_collision = true

[node name="PointLight2D" type="PointLight2D" parent="."]
scale = Vector2(1.5, 1.4999999)
texture = SubResource("GradientTexture2D_e80uo")

[node name="CannonPivot" type="Node2D" parent="."]
position = Vector2(0, -5)

[node name="CannonSprite" type="Sprite2D" parent="CannonPivot"]
position = Vector2(14, 0)
rotation = 6.2831855
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_cxr5p")

[node name="FirePoint" type="Marker2D" parent="CannonPivot"]
position = Vector2(29, 0)

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_e80uo")

[node name="ChargeBar" type="ProgressBar" parent="."]
light_mask = 2
offset_left = -21.0
offset_top = 11.0
offset_right = 22.0
offset_bottom = 27.0
rounded = true
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
